# fe/swagger.json
@@ -655,6 +655,42 @@
         }
       }
     },
+    "/race/clear": {
+      "post": {
+        "tags": [
+          "Race"
+        ],
+        "operationId": "RaceClear",
+        "requestBody": {
+          "x-name": "Request",
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RaceClearRequest"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "500": {
+            "description": "Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalErrorResponse"
+                }
+              }
+            }
+          },
+          "204": {
+            "description": "No Content"
+          }
+        }
+      }
+    },
     "/players": {
       "put": {
         "tags": [
@@ -2026,6 +2062,19 @@
       "RaceDeleteRequest": {
         "type": "object",
         "additionalProperties": false
+      },
+      "RaceClearRequest": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": [
+          "id"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
       },
       "PlayersUpdateRequest": {
         "type": "object",
